interstitial fix: making the container with round corners as per comps, fixing the scrollbars, opacity on background and overall design.

--- a/app/css/global/_header.scss
+++ b/app/css/global/_header.scss
@@ -526,10 +526,10 @@
           }
           
           .nassacort-logo{
-              width: 115px;
+              width: 113px;
               height: 42px;
               background-size: 100%;
-              margin-top:44px;
+              margin-top:42px;
               margin-left: auto;
               margin-right: auto;
               left:0;
